# tray

./: Cargo.toml  README.md
src/: interface.rs  layout.glade  main.rs  status_notifier_host.rs  status_notifier_item.rs  status_notifier_watcher.rs  tray.glade~
src/interfaces/: status_notifier_watcher.rs
